# virallc

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  lineages.tsv  new.env.txt  out.tsv  pyproject.toml  requirements.txt
RotaL/: README.md  __init__.py  pyproject.toml
RotaL.egg-info/: PKG-INFO  requires.txt  top_level.txt
RotaL/RotaL/: __init__.py
RotaL/RotaL.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
RotaL/RotaL/RotaL.egg-info/: entry_points.txt
RotaL/SeqLib/: SeqLib.py
db.rotavirus.lineages/: NSP1.db.final.fasta  NSP1.db.final.lineages.tsv  NSP2.db.final.fasta  NSP2.db.final.lineages.tsv  NSP3.db.final.fasta  NSP3.db.final.lineages.tsv  NSP4.db.final.aln  NSP4.db.final.fasta  NSP4.db.final.lineages.tsv  NSP5.db.final.aln  NSP5.db.final.fasta  NSP5.db.final.lineages.tsv  RVA.RefSeqs.db.mfa  VP1.db.final.fasta  VP1.db.final.lineages.tsv  VP2.db.final.fasta  VP2.db.final.lineages.tsv  VP3.db.final.fasta  VP3.db.final.lineages.tsv  VP4.db.final.fasta  VP4.db.final.lineages.tsv  VP6.db.final.fasta  VP6.db.final.lineages.tsv  VP7.db.final.fasta  VP7.db.final.lineages.tsv
example/: example.fna
viraldb/RotavirusA/: strain.db.info.txt  strain.db.lineage.criteria.txt
viraldb/RotavirusA-Malawi/: strain.db.lineage.criteria.txt
viraldb/RotavirusA-Malawi/fasta/: NSP1.fasta  NSP2.fasta  NSP3.fasta  NSP4.fasta  NSP5.fasta  VP1.fasta  VP2.fasta  VP3.fasta  VP4.fasta  VP6.fasta  VP7.fasta
viraldb/RotavirusA-Malawi/lineages/: NSP1.tsv  NSP2.tsv  NSP3.tsv  NSP4.tsv  NSP5.tsv  VP1.tsv  VP2.tsv  VP3.tsv  VP4.tsv  VP6.tsv  VP7.tsv  lineage.thresholds.txt
viraldb/RotavirusA-Malawi/references/: VP4.fasta
viraldb/RotavirusA/fasta/: NSP1.fasta  NSP2.fasta  NSP3.fasta  NSP4.fasta  NSP5.fasta  VP1.fasta  VP2.fasta  VP3.fasta  VP4.fasta  VP6.fasta  VP7.fasta
viraldb/RotavirusA/lineages/: NSP1.tsv  NSP2.tsv  NSP3.tsv  NSP4.tsv  NSP5.tsv  VP1.tsv  VP2.tsv  VP3.tsv  VP4.tsv  VP6.tsv  VP7.tsv  lineage.thresholds.txt
viraldb/RotavirusA/references/: NSP1.fasta  NSP5.fasta  VP1.fasta  VP2.fasta  VP3.fasta  references.mfa
viraldb/rotavirusA/: strain.db.info.txt
viraldb/rotavirusA/fasta/: NSP2.fasta  NSP5.fasta
viraldb/rotavirusA/lineages/: NSP1.tsv  NSP2.tsv  NSP5.tsv  VP1.tsv  VP2.tsv  VP3.tsv  VP4.tsv  VP7.tsv
viraldb/rotavirusA/references/: NSP2.fasta  NSP3.fasta  NSP4.fasta  VP6.fasta  VP7.fasta
virallc/: SeqLib.py  __init__.py  __main__.py
virallc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
virallc/SeqLib/: SeqLib.py
virallc/scripts/: alnPairDist.py  alnSeqCov.py  cleanFastaSeqs.py  virallcClusters1L.py  virallcClusters2L.py  virallcClusters3L.py  virallcClusters4L.py  virallcLineageChecker.py
