[build-system]
requires = ["setuptools"]

[project]
name = "RotaL"
version = "0.0.1"
authors = [
  { name="Chrispin Chaguza", email="chrispin.chaguza@gmail.com" },
]

maintainers = [
  {name = "Chrispin Chaguza", email = "chrispin.chaguza@gmail.com"},
]

description = "RotaL: A Python package for consistent assignment of rotavirus A lineages"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = "<=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]

keywords = ["Rotavirus","Rotavirus A","Lineage classification","Genotype","Sublineages",]
dependencies = [
   "setuptools",
   "toml",
   "biopython",
]

[tool.setuptools.packages]
find = {} 

[tool.setuptools]
py-modules = ["RotaL.cmdOptions.cmdOptions","RotaL.SeqLib.SeqLib","RotaL",]

[project.scripts]
RotaL = "RotaL:main"

[project.urls]
Homepage = "https://github.com/ChrispinChaguza/rotavirus.lineage.classification/"
Repository = "https://github.com/ChrispinChaguza/rotavirus.lineage.classification.git"
Issues = "https://github.com/ChrispinChaguza/rotavirus.lineage.classification/issues"
Documentation = "https://github.com/ChrispinChaguza/rotavirus.lineage.classification/"
Website = "https://github.com/ChrispinChaguza/rotavirus.lineage.classification"

